Assessment4/force-app/main/default/objects/Loan_Application__c/fields/AI_Rejection_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>AI_Rejection_Suggestion__c</fullName>
    <label>AI Rejection Suggestion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>