Assessment4/force-app/main/default/objects/Loan_Application__c/fields/Rejection_Category__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Category__c</fullName>
    <label>Rejection Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Credit Score</fullName>
            </value>
            <value>
                <fullName>Insufficient Income</fullName>
            </value>
            <value>
                <fullName>Document Missing</fullName>
            </value>
            <value>
                <fullName>Policy Breach</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>